# enody-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  llm.txt
.github/workflows/: ci.yml
src/: emitter.rs  environment.rs  fixture.rs  host.rs  interface.rs  lib.rs  main.rs  message.rs  runtime.rs  serialization.rs  source.rs  spectral.rs  update.rs  usb.rs
src/remote/: ep01.rs  mod.rs  serialization.rs  usb.rs
src/runtime/: mod.rs  serialization.rs  usb.rs
src/usb/: mod.rs  rusb.rs  serialport.rs
