[package]
name = "enody"
version = "0.1.0"
edition = "2021"

[features]
default = ["remote", "cli"]
std = []
remote = ["std", "env_logger", "postcard", "tokio"]
cli = ["clap"]

[[bin]]
name = "enody"
path = "src/main.rs"

[dependencies]
log         = { version = "0.4.27" }
rusb        = { version = "0.9.4", features = ["serde"] }
serde       = { version = "1.0.219", features = ["derive"] }
heapless    = { version = "0.9.2", features = ["serde"] }
uuid        = { version = "1.16.0", features = ["v1", "v4", "v6", "serde"] }

# Dependencies that require std
clap        = { version = "4.5", optional = true, features = ["derive"] }
env_logger  = { version = "0.11.8", optional = true }
postcard    = { version = "1.1.1", default-features = false, features = ["use-std"], optional = true }
tokio       = { version = "1.44.2", features = ["full"], optional = true }
futures     = { version = "0.3.31" }
