[package]
name = "enody"
description = "SDK for Enody Lighting devices"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/enodylighting/enody-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"

[features]
default = ["remote", "cli"]
std = ["postcard/use-std"]
remote = ["std", "env_logger", "tokio", "rusb", "serialport"]
cli = ["clap"]

[[bin]]
name = "enody"
path = "src/main.rs"

[dependencies]
async-trait = { version = "0.1.89"}
log         = { version = "0.4.27" }
rusb        = { version = "0.9.4", features = ["serde"], optional = true }
serde       = { version = "1.0.219", features = ["derive"] }
heapless    = { version = "0.9.2", features = ["serde"] }
uuid        = { version = "1.16.0", features = ["v1", "v4", "v6", "serde"] }
postcard    = { version = "1.1.1", features = ["heapless"], default-features = false }

# Dependencies that require std
clap        = { version = "4.5", optional = true, features = ["derive"] }
env_logger  = { version = "0.11.8", optional = true }
tokio       = { version = "1.44.2", features = ["full"], optional = true }
serialport  = { version = "4.6.0", optional = true }
